[build-system]
requires = [
    "setuptools==80.9.0",
    "Cython==3.2.0",
    "numpy==2.3.4",
]
build-backend = "setuptools.build_meta"

[project]
name = "vectorplot"
version = "0.2.0post4"
description = "Vector fields plotting algorithms."
authors = [
    {name="Anne Archibald", email="archibald@astron.nl"},
]
license = "BSD-2-Clause OR BSD-3-Clause"
license-files = ["LICENSE", "LICENSE.txt"]
dependencies = [
    # keep in sync with NPY_TARGET_VERSION (setup.py)
    "numpy>=1.19.3, <3",
]

[project.readme]
file = "README.rst"
content-type = "restructuredtext"

[project.urls]
Homepage ="https://github.com/aarchiba/scikits-vectorplot"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
